Seed SdkType implementations
Signed-off-by: Nelson Arapé <nelson@spotify.com>