@@ -16,12 +16,11 @@
  */
 package org.flyte.flytekit;
 
-import java.util.Collections;
 import java.util.Map;
 import org.flyte.api.v1.Literal;
 import org.flyte.api.v1.Variable;
 
-/** An utility class for creating {@link SdkType} objects for different types. */
+/** A utility class for creating {@link SdkType} objects for different types. */
 public class SdkTypes {
   private SdkTypes() {}
 
@@ -33,7 +32,7 @@ public class SdkTypes {
 
     @Override
     public Map<String, Literal> toLiteralMap(Void value) {
-      return Collections.emptyMap();
+      return Map.of();
     }
 
     @Override
@@ -48,7 +47,12 @@ public class SdkTypes {
 
     @Override
     public Map<String, Variable> getVariableMap() {
-      return Collections.emptyMap();
+      return Map.of();
+    }
+
+    @Override
+    public Map<String, SdkBindingData<?>> toSdkBindingMap(Void value) {
+      return Map.of();
     }
 
     @Override
